service-c-fault-injection.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service-c
spec:
  hosts:
  - service-c
  http:
  - fault:
      abort:
        httpStatus: 502
        percentage:
          value: 10
    route:
    - destination:
        host: service-c
  - route:
    - destination:
        host: service-c
