smingress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: cloudlab-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: cloudlab-service
spec:
  hosts:
  - "*"
  gateways:
  - cloudlab-gateway
  http:
  - name: "quote-order-route"
    match:
    - uri:
        prefix: "/quoteOrder"
    rewrite:
      uri: "/node-jee"
    route:
    - destination:
        host: service-a
  - name: "quote-item-route"
    match:
    - uri:
        prefix: "/quoteItem"
    rewrite:
      uri: "/node-springboot"
    route:
    - destination:
        host: service-a
